k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: arvind09112004/driving-school:latest
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
